--- a/debug.html
+++ b/debug.html
@@ -12,9 +12,35 @@ onload =function() {
 	console.log(v.reserve)
 	
 	const cs = [] 
+	let c 
 	document.getElementById("cl").addEventListener("change", (ev)=>{
 		console.log(ev.target.value )
-		let vv = ev.target.value.split(" ")
+
+		if( c = compile(v,ev.target.value ) ) {
+			console.log(c) 
+			try {
+				v.run(c)
+			}catch (e) {
+				console.log(e)
+				document.getElementById("msg").innerHTML = e.msg 
+				return 
+			}
+			document.getElementById("msg").innerHTML = "" 
+			dumpstack(v.dumpstack())
+			ev.target.value=""
+		}
+	})
+	document.getElementById("def").addEventListener("click", (ev)=>{
+		const name = document.getElementById("dname").value 
+		const code =  document.getElementById("dcode").value.replace(/\n/g," ")
+		if(c = compile(v,code)) {
+			v.adddict(name,c) 
+			document.getElementById("msg").innerHTML = "define "+name 
+		} 
+	})
+}
+function compile(v,str) {
+		let vv = str.split(" ")
 		let vs = [] 
 		for(let i=0;i<vv.length;i++) {
 			let val = vv[i]
@@ -29,21 +55,10 @@ onload =function() {
 		console.log(vs)
 		let c 
 		if( c = v.compile(vs) ) {
-			console.log(c) 
-			try {
-				v.run(c)
-			}catch (e) {
-				console.log(e)
-				document.getElementById("msg").innerHTML = e.msg 
-				return 
-			}
-			document.getElementById("msg").innerHTML = "" 
-			dumpstack(v.dumpstack())
-			ev.target.value=""
+			return c 
 		} else {
 			document.getElementById("msg").innerHTML = v.emsg
-		}
-	})
+		}	
 }
 function dumpstack(s) {
 	document.getElementById("st").innerHTML =
@@ -72,7 +87,7 @@ function dumpstack(s) {
 </script>
 <link rel="stylesheet" type="text/css" href="">
 <style type="text/css">
-textarea {
+textarea,input {
 	font-family: monospace ;
 	font-size:1rem ;
 }
@@ -80,7 +95,10 @@ textarea {
 </head>
 <body>
 <div>
-<input type=text size=100 id=cl><br/>
+CODE: <input type=text size=100 id=cl><br/>
+DEF NAME:<input type=text size=10 id=dname><br/>
+CODE:
+<textarea cols=80 rows=4 id=dcode></textarea><button id=def>DEF</button><br/>
 </div>
 <div id=msg style="height:3rem;">
 </div>
